Bug: 810147 Reviewer: Jay Wootton Comment: Fix for word wrapping in the "sign out" button.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -5043,7 +5043,7 @@ td.datePickerMonth {
 	margin-right: 5px;
 	padding: 2px 10px;
 	text-align: center;
-	width: 80px;
+	white-space: nowrap;
 	background: -moz-linear-gradient(top,  #ffffff, #E0E0E0); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(110%,#E0E0E0)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top,  #ffffff, #E0E0E0); /* Chrome10+,Safari5.1+ */
